Update test class for Java 15 ...
- samples only for standard features
- markdown javadoc for JEPs
- organize classes related to Java 15
- improve code readability